# casa

./: Dockerfile  Makefile  README.md  pyproject.toml
blind75/: 0_template.py  1-two_sum.py
go/: Makefile  array.go  command.txt  hello.go  slice.go  string.go  variable.go
interview-book/: 1-palindrome.py  2-reverse_string.py  3-reorder_log_files.py
java/: Main.java  binaryDenaryConverter.java  dynamicPg.java  java_iterator.md  numPyramid.java  recursion.java  searchAlgorithm.java  selectionSort.java
leet/blind75/: 1-two_sum.py  _blind75.md
leet/linear-data-structure/: 11-product_of_array_except_self.py  12-best_time_to_buy_and_sell_stock.py  13-palindrome_linked_list.py  14-merge_two_sorted_lists.py  17-swap_nodes_in_pair.py  18-odd_even_ll.py  7-two_sum.py  8-trapping_rain_water.py  9-three_sum.py
leet/stack-queue/: 24-implement_queue_using_stack.py
leet/string-manipulation/: 1-palindrome.py  2-reverse_string.py  4-most_common_word.py
leet/template/: min_max.py  remove_duplicates.py  swap_variables.py
notes/design/: README.md
python/: .dockerignore  4-most_common_word.py  5-group-anagram.py  6-longest-_palindrome_substr.py  Dockerfile
python/1-data-model/: frenchdeck.py  notes.txt  vector.py
python/2-array-seq/: list-comp.py  pattern-matching.py
python/3-dict-sets/: dict.py  set.py
python/linear-data-structure/: 10-array_partition1.py  14-merge_two_sorted_lists.py  15-reverse_linked_list.py  16-add_two_numbers.py  19-reverse_ll.py  (+1 more)
template/: convert_intlist_to_int.py  min_max.py  remove_duplicates.py  swap_variables.py
(+81 files in other folders)
