[tool.poetry]
name = "casa"
version = "0.1.0"
description = ""
authors = ["Soohyung Lee <soohl@kakao.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79